refactor: musica